--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,8 +20,16 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 16px;
+  gap: 16px;
 }
 
+.header {
+  margin-bottom: 8px;
+  font-size: 24px;
+  display: flex;
+}
 .icon {
   color: royalblue;
   font-size: 26px;
@@ -33,6 +41,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex: 1 0 auto;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
 }
 
 .close-button {
@@ -48,6 +62,8 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  margin-left: auto;
+
 }
 
 button {
@@ -60,10 +76,19 @@ button.continue {
   background: royalblue;
   border: 1px solid royalblue;
   color: white;
+  max-width: 100px;
 }
 
 button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+  max-width: 100px;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  margin-top: 8px;
+  gap:8px;
 }
